--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,7 @@
 		
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>webjars-locator</artifactId>
-			<version>0.28</version>
+			<artifactId>webjars-locator-core</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -78,16 +77,15 @@
 			<scope>test</scope>
 		</dependency>
 		
-	    <dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
 		
 	</dependencies>
