--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/DB_sUse?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/DB_sUse?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,3 +8,6 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 spring.jpa.open-in-view = true
+
+#Usado para controle de cache
+spring.thymeleaf.cache = false
