--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-#MySQL                        [username] : [password] @   [host]   /   [database]   ?   [parametro]
+,#MySQL                        [username] : [password] @   [host]   /   [database]   ?   [parametro]
 spring.datasource.url=mysql://bc4d0087ac2146:037425c3@us-cdbr-east-02.cleardb.com/heroku_ca793e4b5e0388a?reconnect=true
 
 #JPA
